--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pdf-tools",
   "version": "0.1.0",
   "private": true,
+  "author": "Robert Julian Kratz",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
